--- a/14.グリッドレイアウト2/styles.css
+++ b/14.グリッドレイアウト2/styles.css
@@ -28,5 +28,33 @@ div > div {
 
 
 /* containerクラスのdiv要素にスタイルを適用 */
-
+.container {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px;
+}
 /* item〇クラスにスタイルを適用 */
+.item1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.item2 {
+  grid-column: 2/3;
+  grid-row: 1/3;
+}
+.item3 {
+  grid-column: 1/2;
+  grid-row: 3/5;
+}
+.item4 {
+  grid-column: 3/4;
+  grid-row: 1/2
+}
+.item5 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+.item6 {
+  grid-column: 2/4;
+  grid-row: 3/5;
+}
